<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFF">

        <ImageView
            android:id="@+id/ivPicture"
            android:layout_marginTop="26dp"
            android:src="@drawable/ic_picture_empty"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:contentDescription="@string/poster" />

        <TextView
            android:text="@string/nabil"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            style="@style/TextView.PoppinsNormal16spnavy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/email"
            style="@style/TextView.PoppinsNormal14spgray"
            android:layout_marginBottom="26dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <Button
        android:id="@+id/btnGithub"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/orange"
        android:background="@drawable/shape_rectangle_8_navy"
        android:layout_height="wrap_content"
        android:text="@string/github"/>

    <Button
        android:id="@+id/btnIg"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/orange"
        android:background="@drawable/shape_rectangle_8_navy"
        android:layout_height="wrap_content"
        android:text="@string/ig"/>

    <Button
        android:id="@+id/btnFb"
        android:layout_width="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/orange"
        android:background="@drawable/shape_rectangle_8_navy"
        android:layout_height="wrap_content"
        android:text="@string/fb"/>

</LinearLayout>