<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_movies">

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.instechrx.natemovie.ui.movies.MoviesFragment"
        android:label="@string/movie"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_tvshow"
        android:name="com.instechrx.natemovie.ui.tvshow.TvShowFragment"
        android:label="@string/tvshow"
        tools:layout="@layout/fragment_tv_show" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.instechrx.natemovie.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>