<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="24dp"
    android:layout_width="180dp"
    android:background="@drawable/background"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivPoster"
        android:scaleType="centerCrop"
        android:src="@drawable/poster_aquaman"
        android:layout_width="180dp"
        android:layout_height="200dp"
        android:contentDescription="@string/poster" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="85dp">
        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextView.PoppinsSemiBold12spwhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:maxLength="14"
            android:text="@string/aquaman"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvRate"
            style="@style/TextView.PoppinsLight8spwhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="2dp"
            android:text="@string/_7_8"
            app:layout_constraintEnd_toStartOf="@+id/ivStar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvGenres"
            style="@style/TextView.PoppinsLight8spwhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="2dp"
            android:text="@string/genres"
            android:maxLength="34"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <TextView
            android:id="@+id/tvTime"
            style="@style/TextView.PoppinsLight8spwhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/time"
            app:layout_constraintStart_toEndOf="@+id/ivdate"
            app:layout_constraintTop_toTopOf="@+id/view" />

        <ImageView
            android:id="@+id/ivStar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/imagestar"
            android:src="@drawable/ic_baseline_star_rate_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="70dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:alpha="0.5"
            android:background="@drawable/shape_rectangle_oval_fff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGenres" />

        <ImageView
            android:id="@+id/ivdate"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/ic_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvGenres"
            android:contentDescription="@string/imagedate" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>